--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@ h2 {
   font-weight: bold;
 }
 
-h3 {
+#end-message {
+  display: none;
   font-weight: bold;
   margin-top: 30px;
   margin-bottom: 20px;
