--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,23 @@
+body {
+  width: 80%;
+  margin: auto;
+  background-color:rgb(71, 71, 71)
+}
+
+h1 {
+  background-color: rgb(110, 156, 158);
+  margin-top: 30px;
+  margin-bottom: 20px;
+  border: 5px solid rgb(56, 56, 124);
+  padding: 15px;
+}
+
 h2 {
   font-weight: bold;
+}
+
+.container {
+  background-color: rgb(148, 148, 148);
 }
 
 #end-message {
@@ -12,7 +30,7 @@ h2 {
 .programming-result {
   display: none;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 #animal-result {
